scr/testsuite/tests/error.ycp
{
    SCR::RegisterAgent (.foo, "tests/error.scr");

    return (SCR::Read (.foo));
}
